Add github link

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -40,6 +40,9 @@
       <!-- Instagram -->
       <a class="btn btn-outline-light btn-floating m-1" href="https://www.instagram.com/vtesdecks" target="_blank"
         role="button" title="Instagram"><i class="bi bi-instagram"></i></a>
+      <!-- Github -->
+      <a class="btn btn-outline-light btn-floating m-1" href="https://github.com/zavierazo/vtesdecks-front"
+        target="_blank" role="button" title="GitHub"><i class="bi bi-github"></i></a>
     </section>
   </div>
   <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
