--- a/src/app/modules/comments/comment/comment.component.html
+++ b/src/app/modules/comments/comment/comment.component.html
@@ -1,5 +1,6 @@
 <div class="d-flex flex-row p-3">
-  <img [src]="comment.profileImage" width="40" height="40" class="rounded-circle me-3" [alt]="comment.fullName">
+  <img [src]="comment.profileImage" width="40" height="40" class="rounded-circle me-3" [alt]="comment.fullName"
+    onerror="this.src='/assets/img/default_user.png'">
   <div class="w-100">
     <div class="d-flex justify-content-between align-items-center">
       <div class="d-flex flex-row align-items-center">
