--- a/src/app/modules/user/profile/profile.component.html
+++ b/src/app/modules/user/profile/profile.component.html
@@ -1,7 +1,8 @@
 <div class="row">
   <div class="col-md-3 border-right">
     <div class="d-flex flex-column align-items-center text-center p-3 py-5">
-      <img class="rounded-circle mt-5" width="150px" [src]="profileImage$ | async" [alt]="displayName$ | async">
+      <img class="rounded-circle mt-5" width="150px" [src]="profileImage$ | async" [alt]="displayName$ | async"
+        onerror="this.src='/assets/img/default_user.png'">
       <span class="fw-bold">
         {{ displayName$ | async }}
       </span>
