--- a/src/app/modules/vtesdle/vtesdle.component.html
+++ b/src/app/modules/vtesdle/vtesdle.component.html
@@ -1,8 +1,8 @@
-<div class="container">
+<div class="container" *transloco="let t; read: 'vtesdle'">
   <main class="container-fluid bg-light1 col-12 col-sm-12 col-md-12 col-lg-12 col-xl-11 my-3" role="main">
     <div class="d-flex justify-content-center align-self-center">
-      <button *ngIf="!infiniteMode; else infiniteLeftModeButtons" ngbTooltip="Help" placement="left" type="button"
-        class="ms-2 btn btn-info" (click)="help()">
+      <button *ngIf="!infiniteMode; else infiniteLeftModeButtons" [ngbTooltip]="t('help')" placement="left"
+        type="button" class="ms-2 btn btn-info" (click)="help()">
         <i class="bi bi-fs-1x bi-question-lg"></i>
       </button>
       <ng-template #infiniteLeftModeButtons>
@@ -12,12 +12,12 @@
         </button>
       </ng-template>
       <h1 class="ms-2 fw-bold title">VTESDLE</h1>
-      <button *ngIf="!infiniteMode; else infiniteRightModeButtons" ngbTooltip="Infinite Mode" placement="right"
+      <button *ngIf="!infiniteMode; else infiniteRightModeButtons" [ngbTooltip]="t('infinite_mode')" placement="right"
         type="button" class="ms-2 btn btn-dark" (click)="switchMode()">
         <i class="bi bi-fs-1x bi-infinity"></i>
       </button>
       <ng-template #infiniteRightModeButtons>
-        <button ngbTooltip="Today Mode" placement="right" type="button" class="ms-2 btn btn-dark"
+        <button [ngbTooltip]="t('today_mode')" placement="right" type="button" class="ms-2 btn btn-dark"
           (click)="switchMode()">
           <i class="bi bi-fs-1x bi-calendar"></i>
         </button>
@@ -26,7 +26,7 @@
     <hr>
     <div class="d-flex justify-content-center align-self-center">
       <div class="image-container">
-        <img *ngIf="cardId; else loading" [src]="getImageUrl()" alt="image to guess" class="card-image" />
+        <img *ngIf="cardId; else loading" [src]="getImageUrl()" class="card-image" />
         <ng-template #loading>
           <app-loading [size]="10"></app-loading>
         </ng-template>
@@ -42,20 +42,20 @@
       <div class="col-12" *ngIf="lives > 0 && !guessed">
         <input autofocus #cryptInput id="crypt" type="text" class="form-control" [ngbTypeahead]="searchCrypt"
           [resultTemplate]="cryptTemplate" [inputFormatter]="formatter" [editable]="false"
-          placeholder="Guess the card name..." (selectItem)="selectCryptItem($event, cryptInput)" />
+          [placeholder]="t('guess_placeholder')" (selectItem)="selectCryptItem($event, cryptInput)" />
       </div>
       <div class="alert alert-success" role="alert" *ngIf="guessed">
-        Congratulations, you have guessed the card!
+        {{ t('win_message') }}
         <span *ngIf="!infiniteMode">
-          Come back tomorrow for more!
+          {{ t('come_back_message') }}
         </span>
       </div>
       <div class="alert alert-danger" role="alert" *ngIf="!guessed && lives <=0">
         <span *ngIf="infiniteMode; else todayMode">
-          Game over, press retry for more!
+          {{ t('game_over_infinite_message') }}
         </span>
         <ng-template #todayMode>
-          Game over, come back tomorrow for more!
+          {{ t('game_over_today_message') }}
         </ng-template>
       </div>
     </div>
@@ -69,7 +69,7 @@
         </ngb-rating>
       </div>
       <div>
-        {{ lives }}&nbsp;remaining lives
+        {{ t('remaining_lives', { lives }) }}
       </div>
     </div>
   </main>
