--- a/src/app/modules/reset-password/reset-password.component.html
+++ b/src/app/modules/reset-password/reset-password.component.html
@@ -1,49 +1,46 @@
-<div class="container reset-password py-5" style="height: 30vw">
-  <h1>Reset Password</h1>
+<div class="container reset-password py-5" style="height: 30vw" *transloco="let t; read: 'reset_password'">
+  <h1>{{ t('reset_password') }}</h1>
   <form [formGroup]="resetPasswordForm" (ngSubmit)="onResetPasswordSubmit()">
 
     <div class="form-floating mb-3">
-      <input type="password" class="form-control rounded-3" id="floatingPassword" placeholder="Password"
+      <input type="password" class="form-control rounded-3" id="floatingPassword" [placeholder]="t('password')"
         formControlName="password" autocomplete="new-password">
-      <label for="floatingPassword">New Password</label>
+      <label for="floatingPassword">{{ t('password') }}</label>
       <div *ngIf="password?.invalid && (password?.dirty || password?.touched)">
         <div class="invalid-feedback d-block" *ngIf="password?.errors?.['required']">
-          <i class="bi bi-x-circle-fill"></i> Password is required.
+          <i class="bi bi-x-circle-fill"></i>{{ 'shared.field_required' | transloco:{ field: t('password') } }}
         </div>
         <div class="invalid-feedback d-block" *ngIf="password?.hasError('hasNumber')">
-          <i class="bi bi-x-circle-fill"></i> Must contain at least 1 number!
+          <i class="bi bi-x-circle-fill"></i> {{ 'login_modal.must_one_number' | transloco }}
         </div>
         <div class="invalid-feedback d-block" *ngIf="password?.hasError('minlength')">
-          <i class="bi bi-x-circle-fill"></i> Must be at least 8 characters!
-        </div>
-        <div class="invalid-feedback d-block" *ngIf="password?.hasError('noPasswordMatch')">
-          <i class="bi bi-x-circle-fill"></i> Password must match!
+          <i class="bi bi-x-circle-fill"></i> {{ 'login_modal.must_8_characters' | transloco }}
         </div>
       </div>
     </div>
     <div class="form-floating mb-3">
-      <input type="password" class="form-control rounded-3" id="floatingConfirmPassword" placeholder="Password"
+      <input type="password" class="form-control rounded-3" id="floatingConfirmPassword" [placeholder]="t('password')"
         formControlName="confirmPassword" autocomplete="new-password">
-      <label for="floatingPassword">Confirm Password</label>
+      <label for="floatingPassword">{{ t('confirm_password') }}</label>
       <div *ngIf="confirmPassword?.invalid && (confirmPassword?.dirty || confirmPassword?.touched)">
         <div class="invalid-feedback d-block" *ngIf="confirmPassword?.errors?.['required']">
-          <i class="bi bi-x-circle-fill"></i> Confirm Password is required.
+          <i class="bi bi-x-circle-fill"></i> {{ 'shared.field_required' | transloco:{ field: t('confirm_password') } }}
         </div>
         <div class="invalid-feedback d-block" *ngIf="confirmPassword?.hasError('hasNumber')">
-          <i class="bi bi-x-circle-fill"></i> Must contain at least 1 number!
+          <i class="bi bi-x-circle-fill"></i> {{ 'login_modal.must_one_number' | transloco }}
         </div>
         <div class="invalid-feedback d-block" *ngIf="confirmPassword?.hasError('minlength')">
-          <i class="bi bi-x-circle-fill"></i> Must be at least 8 characters!
+          <i class="bi bi-x-circle-fill"></i> {{ 'login_modal.must_8_characters' | transloco }}
         </div>
         <div class="invalid-feedback d-block" *ngIf="confirmPassword?.hasError('noPasswordMatch')">
-          <i class="bi bi-x-circle-fill"></i> Password must match!
+          <i class="bi bi-x-circle-fill"></i> {{ 'login_modal.must_match' | transloco }}
         </div>
       </div>
     </div>
 
     <!-- Submit button -->
     <button type="submit" class="w-100 mb-2 btn btn-lg rounded-3 btn-primary" [disabled]="resetPasswordForm.invalid">
-      Reset Password
+      {{ t('reset_password') }}
     </button>
 
   </form>
