--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,175 +1,178 @@
-<section class="mt-4">
-  <div class="row d-flex g-1 g-md-2 g-lg-3 justify-content-center align-items-center">
-    <div class="col-6 col-lg-4">
-      <a routerLink="/decks" [queryParams]="{ type: 'TOURNAMENT' }"
-        class="card bg-primary text-white text-decoration-none">
-        <div class="card-body row d-flex justify-content-center align-items-center">
-          <div class="col-12 col-sm-6">
-            <h2 class="h2-responsive fw-bold mt-n2 mb-0">
-              <animated-digit [digit]="deckHome?.tournamentTotal ?? 0" [duration]="1500"></animated-digit>
-            </h2>
-            <p class="fw-bold mb-0">Tournament Decks</p>
-          </div>
-          <div class="col-auto">
-            <i class="bi bi-award bi-fs-4x text-black-50"></i>
-          </div>
-        </div>
-      </a>
-    </div>
-    <div class="col-6 col-lg-4">
-      <a routerLink="/decks" [queryParams]="{ type: 'COMMUNITY' }"
-        class="card bg-primary text-white text-decoration-none">
-        <div class="card-body row d-flex justify-content-center align-items-center">
-          <div class="col-12 col-sm-6">
-            <h2 class="h2-responsive fw-bold mt-n2 mb-0 countCommunityDecks">
-              <animated-digit [digit]="deckHome?.communityTotal ?? 0" [duration]="1500"></animated-digit>
-            </h2>
-            <p class="fw-bold mb-0">Community Decks</p>
-          </div>
-          <div class="col-auto">
-            <i class="bi bi-people bi-fs-4x text-black-50"></i>
-          </div>
-        </div>
-      </a>
-    </div>
-    <div class="col-6 col-lg-4">
-      <a routerLink="/decks" [queryParams]="{ type: 'PRECONSTRUCTED' }"
-        class="card bg-primary text-white text-decoration-none">
-        <div class="card-body row d-flex justify-content-center align-items-center">
-          <div class="col-12 col-sm-6">
-            <h2 class="h2-responsive fw-bold mt-n2 mb-0 countPreconstructedDecks">
-              <animated-digit [digit]="deckHome?.preConstructedTotal ?? 0" [duration]="1500"></animated-digit>
-            </h2>
-            <p class="fw-bold mb-0">Preconstructed Decks</p>
-          </div>
-          <div class="col-auto">
-            <i class="bi bi-bag bi-fs-4x text-black-50"></i>
-          </div>
-        </div>
-      </a>
-    </div>
-    <div class="col-6 col-lg-4">
-      <ng-template #deckBuilderCard>
-        <div class="card bg-success text-white">
+<ng-container *transloco="let t; read: 'home'">
+  <section class="mt-4">
+    <div class="row d-flex g-1 g-md-2 g-lg-3 justify-content-center align-items-center">
+      <div class="col-6 col-lg-4">
+        <a routerLink="/decks" [queryParams]="{ type: 'TOURNAMENT' }"
+          class="card bg-primary text-white text-decoration-none">
           <div class="card-body row d-flex justify-content-center align-items-center">
             <div class="col-12 col-sm-6">
-              <h3 class="fw-bold text-light mt-2 mb-3">Deck Builder</h3>
+              <h2 class="h2-responsive fw-bold mt-n2 mb-0">
+                <animated-digit [digit]="deckHome?.tournamentTotal ?? 0" [duration]="1500"></animated-digit>
+              </h2>
+              <p class="fw-bold mb-0">{{ t('tournament_decks') }}</p>
             </div>
             <div class="col-auto">
-              <i class="bi bi-magic bi-fs-4x text-black-50"></i>
+              <i class="bi bi-award bi-fs-4x text-black-50"></i>
             </div>
           </div>
-        </div>
-      </ng-template>
-      <a routerLink="/decks/builder" class="text-decoration-none" *isLogged="true">
-        <ng-container *ngTemplateOutlet="deckBuilderCard"></ng-container>
-      </a>
-      <span class="text-decoration-none" href="javascript:void(0)" (click)="openLoginModal()" *isLogged="false">
-        <ng-container *ngTemplateOutlet="deckBuilderCard"></ng-container>
-      </span>
-    </div>
-    <div class="col-6 col-lg-4" *isLogged="true">
-      <a routerLink="/decks" [queryParams]="{ type: 'USER' }" class="card bg-success text-white text-decoration-none">
-        <div class="card-body row d-flex justify-content-center align-items-center">
-          <div class="col-12 col-sm-6">
-            <h2 class="h2-responsive fw-bold mt-n2 mb-0 countPreconstructedDecks">
-              <animated-digit [digit]="deckHome?.userTotal ?? 0" [duration]="1500"></animated-digit>
-            </h2>
-            <p class="fw-bold mb-0">My Decks</p>
-          </div>
-          <div class="col-auto">
-            <i class="bi bi-stack bi-fs-4x text-black-50"></i>
-          </div>
-        </div>
-      </a>
-    </div>
-    <div class="col-6 col-lg-4" *isLogged="true">
-      <a routerLink="/decks" [queryParams]="{ favorite: true}" class="card bg-success text-white text-decoration-none">
-        <div class="card-body row d-flex justify-content-center align-items-center">
-          <div class="col-12 col-sm-6">
-            <h2 class="h2-responsive fw-bold mt-n2 mb-0 countPreconstructedDecks">
-              <animated-digit [digit]="deckHome?.favoriteTotal ?? 0" [duration]="1500"></animated-digit>
-            </h2>
-            <p class="fw-bold mb-0">Bookmark Decks</p>
-          </div>
-          <div class="col-auto">
-            <i class="bi bi-bookmark-star bi-fs-4x text-black-50"></i>
-          </div>
-        </div>
-      </a>
-    </div>
-    <div class="col-6 col-lg-4">
-      <a routerLink="/cards/crypt" class="text-decoration-none">
-        <div class="card bg-secondary text-white">
-          <div class="card-body row d-flex justify-content-center align-items-center">
-            <div class="col-12 col-sm-6">
-              <h3 class="fw-bold text-light mt-2 mb-3">Crypt</h3>
-            </div>
-            <div class="col-auto">
-              <i class="bi bi-file-person bi-fs-4x text-black-50"></i>
-            </div>
-          </div>
-        </div>
-      </a>
-    </div>
-    <div class="col-6 col-lg-4">
-      <a routerLink="/cards/library" class="text-decoration-none">
-        <div class="card bg-secondary text-white">
-          <div class="card-body row d-flex justify-content-center align-items-center">
-            <div class="col-12 col-sm-6">
-              <h3 class="fw-bold text-light mt-2 mb-3">Library</h3>
-            </div>
-            <div class="col-auto">
-              <i class="bi bi-file-richtext bi-fs-4x text-black-50"></i>
-            </div>
-          </div>
-        </div>
-      </a>
-    </div>
-  </div>
-</section>
-<section>
-  <div class="row m-3 d-flex justify-content-between align-items-center">
-    <p class="text-center w-responsive mx-auto mb-2">
-      If you want to contribute, report bugs or raise a problem, you can do so
-      by
-      <span class="d-inline-flex justify-content-between align-items-baseline gap-1">
-        <div class="d-flex justify-content-between align-items-center text-fgThird dark:text-fgThirdDark">
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github"
-            viewBox="0 0 16 16">
-            <path
-              d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8">
-            </path>
-          </svg>
-        </div>
-        <a href="https://github.com/Zavierazo/vtesdecks-front/issues" target="_blank" class="text-decoration-none">
-          GitHub Issues
         </a>
-      </span>
-      or sending an email to
-      <a href="mailto:support@vtesdecks.com" target="_blank" class="text-decoration-none">support&#64;vtesdecks.com</a>
-    </p>
-    <a class="text-center text-muted w-responsive mx-auto" href="https://www.buymeacoffee.com/zavierazo"
-      target="_blank">
-      <img width="235" height="50"
-        src="https://img.buymeacoffee.com/button-api/?text=Buy me a coffee&emoji=☕&slug=zavierazo&button_colour=5F7FFF&font_colour=ffffff&font_family=Lato&outline_colour=000000&coffee_colour=FFDD00"
-        alt="Buy me a coffee" />
-    </a>
+      </div>
+      <div class="col-6 col-lg-4">
+        <a routerLink="/decks" [queryParams]="{ type: 'COMMUNITY' }"
+          class="card bg-primary text-white text-decoration-none">
+          <div class="card-body row d-flex justify-content-center align-items-center">
+            <div class="col-12 col-sm-6">
+              <h2 class="h2-responsive fw-bold mt-n2 mb-0 countCommunityDecks">
+                <animated-digit [digit]="deckHome?.communityTotal ?? 0" [duration]="1500"></animated-digit>
+              </h2>
+              <p class="fw-bold mb-0">{{ t('community_decks') }}</p>
+            </div>
+            <div class="col-auto">
+              <i class="bi bi-people bi-fs-4x text-black-50"></i>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-6 col-lg-4">
+        <a routerLink="/decks" [queryParams]="{ type: 'PRECONSTRUCTED' }"
+          class="card bg-primary text-white text-decoration-none">
+          <div class="card-body row d-flex justify-content-center align-items-center">
+            <div class="col-12 col-sm-6">
+              <h2 class="h2-responsive fw-bold mt-n2 mb-0 countPreconstructedDecks">
+                <animated-digit [digit]="deckHome?.preConstructedTotal ?? 0" [duration]="1500"></animated-digit>
+              </h2>
+              <p class="fw-bold mb-0">{{ t('preconstructed_decks') }}</p>
+            </div>
+            <div class="col-auto">
+              <i class="bi bi-bag bi-fs-4x text-black-50"></i>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-6 col-lg-4">
+        <ng-template #deckBuilderCard>
+          <div class="card bg-success text-white">
+            <div class="card-body row d-flex justify-content-center align-items-center">
+              <div class="col-12 col-sm-6">
+                <h3 class="fw-bold text-light mt-2 mb-3">{{ t('deck_builder') }}</h3>
+              </div>
+              <div class="col-auto">
+                <i class="bi bi-magic bi-fs-4x text-black-50"></i>
+              </div>
+            </div>
+          </div>
+        </ng-template>
+        <a routerLink="/decks/builder" class="text-decoration-none" *isLogged="true">
+          <ng-container *ngTemplateOutlet="deckBuilderCard"></ng-container>
+        </a>
+        <span class="text-decoration-none" href="javascript:void(0)" (click)="openLoginModal()" *isLogged="false">
+          <ng-container *ngTemplateOutlet="deckBuilderCard"></ng-container>
+        </span>
+      </div>
+      <div class="col-6 col-lg-4" *isLogged="true">
+        <a routerLink="/decks" [queryParams]="{ type: 'USER' }" class="card bg-success text-white text-decoration-none">
+          <div class="card-body row d-flex justify-content-center align-items-center">
+            <div class="col-12 col-sm-6">
+              <h2 class="h2-responsive fw-bold mt-n2 mb-0 countPreconstructedDecks">
+                <animated-digit [digit]="deckHome?.userTotal ?? 0" [duration]="1500"></animated-digit>
+              </h2>
+              <p class="fw-bold mb-0">{{ t('user_decks') }}</p>
+            </div>
+            <div class="col-auto">
+              <i class="bi bi-stack bi-fs-4x text-black-50"></i>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-6 col-lg-4" *isLogged="true">
+        <a routerLink="/decks" [queryParams]="{ favorite: true}"
+          class="card bg-success text-white text-decoration-none">
+          <div class="card-body row d-flex justify-content-center align-items-center">
+            <div class="col-12 col-sm-6">
+              <h2 class="h2-responsive fw-bold mt-n2 mb-0 countPreconstructedDecks">
+                <animated-digit [digit]="deckHome?.favoriteTotal ?? 0" [duration]="1500"></animated-digit>
+              </h2>
+              <p class="fw-bold mb-0">{{ t('bookmarked_decks') }}</p>
+            </div>
+            <div class="col-auto">
+              <i class="bi bi-bookmark-star bi-fs-4x text-black-50"></i>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-6 col-lg-4">
+        <a routerLink="/cards/crypt" class="text-decoration-none">
+          <div class="card bg-secondary text-white">
+            <div class="card-body row d-flex justify-content-center align-items-center">
+              <div class="col-12 col-sm-6">
+                <h3 class="fw-bold text-light mt-2 mb-3">{{ 'shared.crypt' | transloco }}</h3>
+              </div>
+              <div class="col-auto">
+                <i class="bi bi-file-person bi-fs-4x text-black-50"></i>
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-6 col-lg-4">
+        <a routerLink="/cards/library" class="text-decoration-none">
+          <div class="card bg-secondary text-white">
+            <div class="card-body row d-flex justify-content-center align-items-center">
+              <div class="col-12 col-sm-6">
+                <h3 class="fw-bold text-light mt-2 mb-3">{{ 'shared.library' | transloco }}</h3>
+              </div>
+              <div class="col-auto">
+                <i class="bi bi-file-richtext bi-fs-4x text-black-50"></i>
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+  </section>
+  <section>
+    <div class="row m-3 d-flex justify-content-between align-items-center">
+      <p class="text-center w-responsive mx-auto mb-2">
+        {{ t('contribute_message') }}
+        <span class="d-inline-flex justify-content-between align-items-baseline gap-1">
+          <div class="d-flex justify-content-between align-items-center text-fgThird dark:text-fgThirdDark">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github"
+              viewBox="0 0 16 16">
+              <path
+                d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8">
+              </path>
+            </svg>
+          </div>
+          <a href="https://github.com/Zavierazo/vtesdecks-front/issues" target="_blank" class="text-decoration-none">
+            {{ t('contribute_github_issues') }}
+          </a>
+        </span>
+        {{ t('contribute_or_message') }}
+        <a href="mailto:support@vtesdecks.com" target="_blank"
+          class="text-decoration-none">support&#64;vtesdecks.com</a>
+      </p>
+      <a class="text-center text-muted w-responsive mx-auto" href="https://www.buymeacoffee.com/zavierazo"
+        target="_blank">
+        <img width="235" height="50"
+          src="https://img.buymeacoffee.com/button-api/?text=Buy me a coffee&emoji=☕&slug=zavierazo&button_colour=5F7FFF&font_colour=ffffff&font_family=Lato&outline_colour=000000&coffee_colour=FFDD00"
+          alt="Buy me a coffee" />
+      </a>
+    </div>
+  </section>
+  <div class="row mt-3">
+    <app-home-section class="col-md-12 col-lg-6 my-3" [deckParams]="{ type: 'TOURNAMENT', order: 'POPULAR' }"
+      [decks]="deckHome?.tournamentPopular">
+    </app-home-section>
+    <app-home-section class="col-md-12 col-lg-6 my-3" [deckParams]="{ type: 'COMMUNITY', order: 'POPULAR' }"
+      [decks]="deckHome?.communityPopular">
+    </app-home-section>
   </div>
-</section>
-<div class="row mt-3">
-  <app-home-section class="col-md-12 col-lg-6 my-3" [deckParams]="{ type: 'TOURNAMENT', order: 'POPULAR' }"
-    [decks]="deckHome?.tournamentPopular">
-  </app-home-section>
-  <app-home-section class="col-md-12 col-lg-6 my-3" [deckParams]="{ type: 'COMMUNITY', order: 'POPULAR' }"
-    [decks]="deckHome?.communityPopular">
-  </app-home-section>
-</div>
-<div class="row mb-3">
-  <app-home-section class="col-md-12 col-lg-6 my-3" [deckParams]="{ type: 'TOURNAMENT', order: 'NEWEST' }"
-    [decks]="deckHome?.tournamentNewest">
-  </app-home-section>
-  <app-home-section class="col-md-12 col-lg-6 my-3" [deckParams]="{ type: 'COMMUNITY', order: 'NEWEST' }"
-    [decks]="deckHome?.communityNewest">
-  </app-home-section>
-</div>
+  <div class="row mb-3">
+    <app-home-section class="col-md-12 col-lg-6 my-3" [deckParams]="{ type: 'TOURNAMENT', order: 'NEWEST' }"
+      [decks]="deckHome?.tournamentNewest">
+    </app-home-section>
+    <app-home-section class="col-md-12 col-lg-6 my-3" [deckParams]="{ type: 'COMMUNITY', order: 'NEWEST' }"
+      [decks]="deckHome?.communityNewest">
+    </app-home-section>
+  </div>
+</ng-container>
