Add decks localization

--- a/src/app/modules/contact/contact.component.html
+++ b/src/app/modules/contact/contact.component.html
@@ -51,7 +51,7 @@
     </div>
     <div *ngIf="error">
       <div class="text-center text-danger mb-3">
-        <i class="bi bi-x-circle-fill"></i> {{ t('error') }} &nbsp;Error sending message! Please contact us to mail
+        <i class="bi bi-x-circle-fill"></i>&nbsp;{{ t('error') }}
         <a href="mailto:support@vtesdecks.com">
           support&#64;vtesdecks.com
         </a>
