--- a/src/app/modules/home/home-section/home-section.component.html
+++ b/src/app/modules/home/home-section/home-section.component.html
@@ -1,6 +1,6 @@
 <div class="card text-center shadow-2-strong h-100">
   <div class="view shadow-5-strong">
-    <h5>{{ order | titlecase }}&nbsp;{{ type | titlecase }}</h5>
+    <h5>{{ title | titlecase }}</h5>
   </div>
   <div class="card-body p-0 py-2">
     <div class="container-fluid" *ngIf="decks; else loading">
