--- a/src/app/modules/comments/comment/comment.component.html
+++ b/src/app/modules/comments/comment/comment.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex flex-row p-3">
+<div class="d-flex flex-row p-3" *transloco="let t; read: 'comments'">
   <img [src]="comment.profileImage" width="40" height="40" class="rounded-circle me-3" [alt]="comment.fullName"
     onerror="this.src='/assets/img/default_user.png'">
   <div class="w-100">
@@ -8,7 +8,7 @@
           {{ comment.fullName }}
         </span>
         <small class="badge bg-primary ms-2" *ngIf="comment.createdByAdmin">
-          Admin
+          {{ t('admin') }}
         </small>
       </div> <small>{{ comment.modified | dateAsAgo }}</small>
     </div>
@@ -17,19 +17,20 @@
     </p>
     <form class="comment-form" [formGroup]="form" (ngSubmit)="editComment()" *ngIf="isEditing">
       <div class="input-group mb-3">
-        <input type="text" formControlName="comment" class="form-control" placeholder="Modify your comment...">
-        <button type="button" class="btn btn-outline-primary" (click)="editComment()" title="Edit comment">
+        <input type="text" formControlName="comment" class="form-control" [placeholder]="t('edit_placeholder')">
+        <button type="button" class="btn btn-outline-primary" (click)="editComment()" [title]="t('edit_title')">
           <i class="bi bi-pencil-fill"></i>
         </button>
       </div>
     </form>
     <div class="d-flex flex-row user-feed" *ngIf="comment.createdByCurrentUser || (isAdmin$ | async)!">
       <a class="text-decoration-none" href="javascript:void(0)" (click)="switchEditComment()" *ngIf="!isEditing"
-        title="Edit comment">
-        <i class="bi bi-pencil-fill me-1"></i>Edit
+        [title]="t('edit_title')">
+        <i class="bi bi-pencil-fill me-1"></i>{{ t('edit') }}
       </a>
-      <a class="text-decoration-none ms-2" href="javascript:void(0)" (click)="deleteComment()" title="Delete comment">
-        <i class="bi bi-trash-fill me-1"></i>Delete
+      <a class="text-decoration-none ms-2" href="javascript:void(0)" (click)="deleteComment()"
+        [title]="t('delete_title')">
+        <i class="bi bi-trash-fill me-1"></i>{{ t('delete') }}
       </a>
     </div>
   </div>
