--- a/src/app/modules/deck-shared/crypt/crypt.component.html
+++ b/src/app/modules/deck-shared/crypt/crypt.component.html
@@ -54,8 +54,9 @@
               {{ crypt.group == -1 ? "any" : crypt.group }}
             </span>
           </small>
-          <span *ngIf="crypt.banned" class="ms-1 float-start badge text-bg-danger">{{ 'deck_shared.banned' | transloco
-            }}</span>
+          <span *ngIf="crypt.banned" class="ms-1 float-start badge text-bg-danger">
+            {{ 'deck_shared.banned' | transloco }}
+          </span>
         </div>
       </div>
     </div>
